--- a/public/scan-spec.html
+++ b/public/scan-spec.html
@@ -288,7 +288,7 @@
 <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js" crossorigin="anonymous"></script>
 <script>
 (() => {
-  const FEATURE = { AIRTABLE_FETCH: true };
+  const FEATURE = { AIRTABLE_FETCH: false };
 
   const D = {
     video: q('#video'), overlay: q('#overlay'), freeze: q('#freeze'), stack: q('#stack'),
