--- a/public/scan-register.html
+++ b/public/scan-register.html
@@ -159,7 +159,7 @@
 // ========= 設定 (Settings) =========
 const SHEET_ENDPOINT = "/api/gsheet-seen-bulk";
 const AIRTABLE_ENDPOINT = "/api/airtable-update"; // Airtable APIエンドポイント
-const AIRTABLE_ENABLED = false; // ★ Airtable更新を一時停止
+const AIRTABLE_ENABLED = true; // ★ Airtable更新を一時停止
 const SCAN_RESOLUTION = 800; // スキャン解像度(px)。高いほど高精細だが遅くなる。600-800がおすすめ。
 const AIRTABLE_BATCH_SIZE = 10;          // ★ Airtable: 10件ずつ
 const AIRTABLE_BATCH_PAUSE_MS = 250;     // バッチ間の待機（レート緩和用）
