--- a/public/scan-register.html
+++ b/public/scan-register.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>棚→型 QRスキャン登録_air_on_1106</title>
+<title>棚→型 QRスキャン登録_air_off_1106</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
   :root {
@@ -90,7 +90,7 @@
 <body>
 
 <header>
-  <h1>棚→型 QRスキャン登録_air_on_1106</h1>
+  <h1>棚→型 QRスキャン登録_air_off_1106</h1>
   <div class="cam-controls">
     <button id="btnStart" class="btn btn-primary">カメラ開始</button>
     <button id="btnStop" class="btn" disabled>停止</button>
@@ -159,7 +159,7 @@
 // ========= 設定 (Settings) =========
 const SHEET_ENDPOINT = "/api/gsheet-seen-bulk";
 const AIRTABLE_ENDPOINT = "/api/airtable-update"; // Airtable APIエンドポイント
-const AIRTABLE_ENABLED = true; // ← Airtable更新を有効化
+const AIRTABLE_ENABLED = false; // ← Airtable更新を有効化
 const SCAN_RESOLUTION = 600;
 
 
