--- a/public/scan-spec.html
+++ b/public/scan-spec.html
@@ -87,7 +87,7 @@
 </head>
 <body>
 <div class="wrap">
-  <h1>仕様照会モード｜die / order → Airtable(on/off) + Google Sheets(仕様)</h1>
+  <h1>仕様照会モード｜die / order → Airtable(on/off%) + Google Sheets(仕様)</h1>
 
   <div class="row">
     <!-- 左：カメラ -->
