--- a/public/scan-register.html
+++ b/public/scan-register.html
@@ -159,7 +159,7 @@
 // ========= 設定 (Settings) =========
 const SHEET_ENDPOINT = "/api/gsheet-seen-bulk";
 const AIRTABLE_ENDPOINT = "/api/airtable-update"; // Airtable APIエンドポイント
-const AIRTABLE_ENABLED = false; // ← Airtable更新を有効化
+const AIRTABLE_ENABLED = true; // ← Airtable更新を有効化
 const SCAN_RESOLUTION = 600;
 
 
