--- a/public/scan-register_安定版.html
+++ b/public/scan-register_安定版.html
@@ -90,7 +90,7 @@
 <body>
 
 <header>
-  <h1>棚→型 QRスキャン登録_air_on_gpt_1108</h1>
+  <h1>棚→型 QRスキャン登録_air_on_gpt_1108b</h1>
   <div class="cam-controls">
     <button id="btnStart" class="btn btn-primary">カメラ開始</button>
     <button id="btnStop" class="btn" disabled>停止</button>
@@ -158,7 +158,7 @@
 <script>
 // ========= 設定 (Settings) =========
 const SHEET_ENDPOINT = "/api/gsheet-seen-bulk";
-const AIRTABLE_ENDPOINT = "/api/airtable-update"; // Airtable APIエンドポイント
+const AIRTABLE_ENDPOINT = "/api/airtable-update-loc"// Airtable APIエンドポイント
 const AIRTABLE_ENABLED = true; // ← Airtable更新を有効化
 const SCAN_RESOLUTION = 600;
 
