--- a/public/scan-register.html
+++ b/public/scan-register.html
@@ -90,7 +90,7 @@
 <body>
 
 <header>
-  <h1>棚→型 QRスキャン登録_air_on_gpt_1108</h1>
+  <h1>棚→型 QRスキャン登録_air_on_deep_1108</h1>
   <div class="cam-controls">
     <button id="btnStart" class="btn btn-primary">カメラ開始</button>
     <button id="btnStop" class="btn" disabled>停止</button>
@@ -423,7 +423,7 @@ async function submitUpdate() {
   if (!fixedLoc || fixedDies.size === 0) return;
 
   const now = new Date();
-  const captured_date = `${now.getFullYear()}-${String(now.getMonth() + 1).padStart(2, '0')}-${String(now.getDate()).padStart(2, '0')}`;
+  const captured_date = `${now.getFullYear()}ぎ-${String(now.getMonth() + 1).padStart(2, '0')}-${String(now.getDate()).padStart(2, '0')}`;
 
   const items = [...fixedDies.values()].map(d => ({
     book: d.bn,
