--- a/public/scan-spec.html
+++ b/public/scan-spec.html
@@ -628,6 +628,7 @@
     }
     setStatus('ロック完了', 'ok');
     stopCam({keepFrame:true});
+    setStatus('ロック完了', 'ok');
   }
 
   async function detectCombined(){
